[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-email-triage"
version = "1.0.0"
description = "OpenEnv hackathon submission: email inbox triage RL environment."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenEnv Hackathon Participant" }
]
dependencies = [
  "fastapi==0.111.0",
  "uvicorn==0.30.1",
  "pydantic==2.8.2",
  "numpy==1.26.4",
  "openai==1.40.2",
  "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
