[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-email-triage"
version = "1.0.0"
description = "OpenEnv hackathon submission: email inbox triage RL environment."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenEnv Hackathon Participant" }
]
dependencies = [
  "openenv-core>=0.2.0",
  "fastapi==0.115.6",
  "uvicorn==0.32.1",
  "pydantic==2.10.3",
  "numpy==2.2.1",
  "openai==1.57.0",
  "httpx==0.28.1",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
