[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-email-triage"
version = "1.0.0"
description = "OpenEnv hackathon submission: email inbox triage RL environment."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenEnv Hackathon Participant" }]
dependencies = [
  "openenv-core>=0.2.0",
  "fastapi>=0.111,<1.0",
  "uvicorn>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "numpy>=1.26,<3.0",
  "httpx>=0.27,<1.0"
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
